--- a/src_v2/languages/Italiano/lang.txt
+++ b/src_v2/languages/Italiano/lang.txt
@@ -190,8 +190,8 @@ LOADING_SKIN_TITLE=Attendere...
 LOADING_SKIN=Caricamento della nuova skin...
 CHECKING_PLAYLIST=Controllo files della playlist... 
 
-SETTINGS_16=Intervallo ripetiz. tasti
-SETTINGS_17=Mostra splash screen
+SETTINGS_17=Intervallo ripetiz. tasti
+SETTINGS_18=Mostra splash screen
 
 BROWSE_TOP100=Top 100
 BROWSE_ALL=Visualizza tutti
@@ -230,4 +230,11 @@ SLEEP_MODE_4=1:00 Hour
 SLEEP_MODE_5=1:30 Hours
 SLEEP_MODE_6=2:00 Hours
 
-SETTINGS_18=Display Off on Hold
+################################################################################
+#2.0.0 RC4
+################################################################################
+SETTINGS_16=CPU Clock: WMA
+SETTINGS_19=Display Off on Hold
+
+LOADING_LANGUAGE_TITLE=Please Wait
+LOADING_LANGUAGE=Loading new language
