--- a/src_v2/languages/Russian/lang.txt
+++ b/src_v2/languages/Russian/lang.txt
@@ -188,8 +188,8 @@ LOADING_SKIN_TITLE=онфюксиярю онднфдхре
 LOADING_SKIN=гюцпсгйю мнбни релш
 CHECKING_PLAYLIST=опнбепйю тюикнб океикхярю
 
-SETTINGS_16=хмрепбюк онбрнпю йкчвеи
-SETTINGS_17=онйюгшбюрэ гюярюбйс
+SETTINGS_17=хмрепбюк онбрнпю йкчвеи
+SETTINGS_18=онйюгшбюрэ гюярюбйс
 
 BROWSE_TOP100=рно 100
 BROWSE_ALL=бшапюрэ бяе
@@ -224,4 +224,11 @@ SLEEP_MODE_4=1:00 Hour
 SLEEP_MODE_5=1:30 Hours
 SLEEP_MODE_6=2:00 Hours
 
-SETTINGS_18=Display Off on Hold
+################################################################################
+#2.0.0 RC4
+################################################################################
+SETTINGS_16=CPU Clock: WMA
+SETTINGS_19=Display Off on Hold
+
+LOADING_LANGUAGE_TITLE=Please Wait
+LOADING_LANGUAGE=Loading new language
